# amazon-bedrock-agentcore-lambda

./: .env.example  .gitignore  AGENT_PROMPT.md  ARCHITECTURE_PROPOSAL.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_FLOW.md  GITHUB_ISSUE_CREATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  env-vars.example.json  pyproject.toml  requirements-dev.txt  samconfig.toml  template.yaml
.specify/memory/: constitution.md
events/: test-event.json
hooks/: post_traffic.py  pre_traffic.py
specs/001-shared-agent-invocation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shared-agent-invocation/checklists/: requirements.md
specs/001-shared-agent-invocation/contracts/: lambda-handler-interface.md  sam-template-resource.yaml
src/: handler.py  requirements.txt  sqs_email_handler.py  sqs_email_handler_backup.py
src/domain/: __init__.py  email_processor.py  models.py
src/integrations/: __init__.py  agentcore_invocation.py
src/prompts/: README.md  github_issue.txt
src/services/: __init__.py  attachment.py  email.py  prompts.py  s3.py
tests/: conftest.py  test_domain_models.py  test_handler.py  test_integration_agentcore_invocation.py  test_service_attachment.py  test_service_email.py  test_service_prompts.py  test_service_s3.py  test_sqs_email_handler.py
tests/events/: sqs-email-with-agent-invocation.json  sqs-event.json
tests/integrations/: __init__.py
tests/services/: __init__.py
